# oso

.github/workflows/: publish.yml
languages/java/oso/: pom.xml
languages/python/polar/: host.py  polar.py  query.py
languages/python/tests/: test_polar.py
languages/python/tests/parity/: test_api.py
polar-analyzer/: Cargo.toml  Makefile
polar-analyzer/pkg/: polar_analyzer.d.ts  polar_analyzer.js  polar_analyzer_bg.wasm  polar_analyzer_bg.wasm.d.ts
polar-analyzer/src/: lib.rs  polar.rs
polar-analyzer/src/diagnostics/: errors.rs
polar-analyzer/src/inspect/: mod.rs  rules.rs
polar-core/src/: kb.rs  lib.rs  parser.rs  polar.lalrpop  polar.rs  sources.rs  vm.rs
test/: test.py
vscode/oso-lsp/: package-lock.json  package.json
vscode/oso-lsp/client/src/: extension.ts
vscode/oso-lsp/server/: package.json
vscode/oso-lsp/server/src/: server.ts
